@@ -2717,6 +2717,185 @@ name|disconnect
 argument_list|()
 expr_stmt|;
 block|}
+block|{
+comment|//test create with path containing spaces
+name|HttpOpParam
+operator|.
+name|Op
+name|op
+init|=
+name|PutOpParam
+operator|.
+name|Op
+operator|.
+name|CREATE
+decl_stmt|;
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/test/path%20with%20spaces"
+argument_list|)
+decl_stmt|;
+name|URL
+name|url
+init|=
+name|webhdfs
+operator|.
+name|toUrl
+argument_list|(
+name|op
+argument_list|,
+name|path
+argument_list|)
+decl_stmt|;
+name|HttpURLConnection
+name|conn
+init|=
+operator|(
+name|HttpURLConnection
+operator|)
+name|url
+operator|.
+name|openConnection
+argument_list|()
+decl_stmt|;
+name|conn
+operator|.
+name|setRequestMethod
+argument_list|(
+name|op
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|conn
+operator|.
+name|setDoOutput
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|conn
+operator|.
+name|setInstanceFollowRedirects
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+specifier|final
+name|String
+name|redirect
+decl_stmt|;
+try|try
+block|{
+name|conn
+operator|.
+name|connect
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|HttpServletResponse
+operator|.
+name|SC_TEMPORARY_REDIRECT
+argument_list|,
+name|conn
+operator|.
+name|getResponseCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|redirect
+operator|=
+name|conn
+operator|.
+name|getHeaderField
+argument_list|(
+literal|"Location"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|conn
+operator|.
+name|disconnect
+argument_list|()
+expr_stmt|;
+block|}
+name|conn
+operator|=
+operator|(
+name|HttpURLConnection
+operator|)
+operator|new
+name|URL
+argument_list|(
+name|redirect
+argument_list|)
+operator|.
+name|openConnection
+argument_list|()
+expr_stmt|;
+name|conn
+operator|.
+name|setRequestMethod
+argument_list|(
+name|op
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|conn
+operator|.
+name|setDoOutput
+argument_list|(
+name|op
+operator|.
+name|getDoOutput
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|conn
+operator|.
+name|connect
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|HttpServletResponse
+operator|.
+name|SC_CREATED
+argument_list|,
+name|conn
+operator|.
+name|getResponseCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|conn
+operator|.
+name|disconnect
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
